gke/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-console-backend-service
spec:
  type: NodePort
  selector:
    app: apiconsole
    tier: backend
  ports:
  - name: api-port
    protocol: TCP
    port: 60004
    targetPort: 50004
