gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-console-www-service
spec:
  type: NodePort
  selector:
    app: apiconsole
    tier: frontend
  ports:
  - name: www-port
    protocol: TCP
    port: 60001
    targetPort: 50001
  - name: demo-port
    protocol: TCP
    port: 60002
    targetPort: 50002
